Criação das ações Adicionar, Listar e Selecionar endereços